# haskellweekly

./: .devcontainer.json  .dockerignore  .ghci  .gitattributes  .gitignore  .hlint.yaml  .weeder.yaml  Dockerfile  LICENSE.markdown  README.markdown  README.md  app.json  cabal.project  default.nix  docker-compose.yml  flake.nix  fly.toml  haskellweekly.cabal  heroku.yml  hie.yaml  stack.yaml
.devcontainer/: Dockerfile  compose.yaml  devcontainer.json  initialize.sh  on-create.sh
.github/: dependabot.yml
.github/workflows/: ci.yaml  fly.yaml
config/: brittany.yaml  cloud-formation.yaml  hindent.yaml  stylish-haskell.yaml  weeder.yaml
data/: README.markdown
data/caption/: episode-1.srt  episode-1.vtt  episode-10.srt  episode-11.srt  episode-12.srt  episode-14.srt  episode-15.srt  episode-18.srt  episode-2.srt  episode-3.srt  episode-4.srt  episode-5.srt  episode-6.srt  episode-7.srt
data/newsletter/: Issue-181.markdown  issue-1.markdown  issue-10.markdown  issue-100.markdown  issue-101.markdown  issue-102.markdown  issue-103.markdown  issue-104.markdown  issue-105.markdown  issue-106.markdown  issue-107.markdown  issue-108.markdown  issue-109.markdown  issue-11.markdown  issue-110.markdown  issue-111.markdown  issue-112.markdown  issue-113.markdown  issue-114.markdown  issue-115.markdown  issue-116.markdown  issue-117.markdown  issue-118.markdown  issue-119.markdown  issue-12.markdown  issue-120.markdown  issue-121.markdown  issue-122.markdown  issue-123.markdown  issue-124.markdown  issue-125.markdown  issue-126.markdown  issue-127.markdown  issue-128.markdown  issue-129.markdown  issue-13.markdown  issue-130.markdown  issue-131.markdown  issue-132.markdown  issue-133.markdown  (+340 more)
data/newsletter/2016/: issue-1.markdown  issue-10.markdown  issue-11.markdown  issue-12.markdown  issue-15.markdown  issue-16.markdown  issue-18.markdown  issue-19.markdown  issue-22.markdown  issue-23.markdown  issue-24.markdown  issue-25.markdown  issue-26.markdown  issue-27.markdown  issue-29.markdown  issue-3.markdown  issue-31.markdown  issue-32.markdown  issue-33.markdown  issue-35.markdown  issue-4.markdown  issue-6.markdown  issue-7.markdown  issue-9.markdown
data/newsletter/2017/: issue-36.markdown  issue-37.markdown  issue-38.markdown  issue-41.markdown  issue-42.markdown  issue-43.markdown  issue-47.markdown  issue-49.markdown  issue-50.markdown  issue-51.markdown  issue-56.markdown  issue-62.markdown  issue-63.markdown  issue-64.markdown  issue-65.markdown  issue-66.markdown  issue-67.markdown  issue-69.markdown  issue-70.markdown  issue-71.markdown  issue-74.markdown  issue-78.markdown  issue-81.markdown  issue-82.markdown  issue-84.markdown  issue-85.markdown  issue-86.markdown  issue-87.markdown
data/newsletter/2018/: issue-100.markdown  issue-101.markdown  issue-103.markdown  issue-104.markdown  issue-106.markdown  issue-110.markdown  issue-111.markdown  issue-113.markdown  issue-115.markdown  issue-117.markdown  issue-118.markdown  issue-120.markdown  issue-122.markdown  issue-125.markdown  issue-126.markdown  issue-128.markdown  issue-129.markdown  issue-133.markdown  issue-136.markdown  issue-137.markdown  issue-138.markdown  issue-139.markdown  issue-89.markdown  issue-91.markdown  issue-93.markdown  issue-99.markdown
data/newsletter/2019/: issue-141.markdown  issue-145.markdown  issue-148.markdown  issue-150.markdown  issue-151.markdown  issue-152.markdown  issue-154.markdown  issue-156.markdown  issue-157.markdown  issue-158.markdown  issue-161.markdown  issue-164.markdown  issue-165.markdown  issue-166.markdown  issue-167.markdown  issue-168.markdown  issue-169.markdown  issue-171.markdown  issue-174.markdown  issue-176.markdown  issue-177.markdown  issue-178.markdown  issue-181.markdown  issue-182.markdown  issue-183.markdown  issue-184.markdown  issue-186.markdown  issue-188.markdown  issue-189.markdown
data/newsletter/2020/: issue-192.markdown  issue-193.markdown  issue-194.markdown  issue-197.markdown  issue-198.markdown  issue-200.markdown  issue-203.markdown  issue-205.markdown  issue-206.markdown  issue-207.markdown  issue-212.markdown  issue-213.markdown  issue-214.markdown  issue-217.markdown  issue-218.markdown  issue-219.markdown  issue-222.markdown  issue-223.markdown  issue-224.markdown  issue-226.markdown  issue-227.markdown  issue-231.markdown  issue-234.markdown  issue-236.markdown  issue-238.markdown  issue-239.markdown  issue-240.markdown  issue-241.markdown  issue-242.markdown  issue-243.markdown  issue-244.markdown
data/newsletter/2021/: issue-246.markdown  issue-247.markdown  issue-248.markdown  issue-249.markdown  issue-251.markdown  issue-254.markdown  issue-257.markdown  issue-259.markdown  issue-260.markdown  issue-261.markdown  issue-263.markdown  issue-268.markdown  issue-269.markdown  issue-270.markdown  issue-272.markdown  issue-273.markdown  issue-274.markdown  issue-275.markdown  issue-276.markdown  issue-277.markdown  issue-280.markdown  issue-283.markdown  issue-285.markdown  issue-287.markdown  issue-288.markdown  issue-290.markdown  issue-292.markdown  issue-296.markdown
data/newsletter/2022/: issue-298.markdown  issue-299.markdown  issue-300.markdown  issue-301.markdown  issue-303.markdown  issue-304.markdown  issue-306.markdown  (+24 more)
data/podcast/: episode-1.vtt  episode-10.srt  episode-10.vtt  episode-11.srt  episode-11.vtt  episode-12.srt  episode-12.vtt  episode-13.srt  episode-13.vtt  episode-14.srt  episode-14.vtt  episode-15.srt  episode-15.vtt  episode-16.srt  episode-16.vtt  episode-17.srt  episode-17.vtt  episode-18.srt  episode-18.vtt  episode-19.srt  episode-19.vtt  episode-2.srt  episode-2.vtt  episode-20.srt  episode-20.vtt  episode-21.srt  episode-21.vtt  episode-22.srt  episode-22.vtt  episode-23.srt  episode-23.vtt  episode-24.srt  episode-24.vtt  episode-25.srt  episode-25.vtt  episode-26.srt  episode-26.vtt  episode-27.vtt  episode-28.vtt  episode-29.vtt  (+41 more)
docker/: Dockerfile
source/executable/: Main.hs
source/test-suite/: Main.hs
src/exe/: Main.hs
src/lib/: HaskellWeekly.hs
src/test/: Main.hs
(+235 files in other folders)
