cabal-version: 2.0

name: haskellweekly
version: 0.2021.11.18

build-type: Simple
category: Web
description:
  Haskell Weekly publishes curated news about the Haskell programming language.
license: ISC
maintainer: Taylor Fausak
synopsis: Publishes curated news about Haskell.

data-dir: data
data-files:
  apple-podcasts.svg
  favicon.ico
  google-podcasts.svg
  logo.png
  newsletter/*.markdown
  podcast/*.vtt
  tachyons.css
extra-source-files: README.markdown
license-file: LICENSE.markdown

source-repository head
  location: https://github.com/haskellweekly/haskellweekly.git
  type: git

library
  autogen-modules: Paths_haskellweekly
  build-depends:
    base ^>= 4.14.0 || ^>= 4.15.0
    , bytestring ^>= 0.10.10
    , case-insensitive ^>= 1.2.1
    , cmark ^>= 0.6
    , containers ^>= 0.6.2
    , cryptonite ^>= 0.27 || ^>= 0.29
    , filepath ^>= 1.4.2
    , http-types ^>= 0.12.3
    , lucid ^>= 2.9.12
    , memory ^>= 0.15.0 || ^>= 0.16.0
    , network-uri ^>= 2.6.3
    , text ^>= 1.2.3
    , time ^>= 1.9.3
    , transformers ^>= 0.5.6
    , uuid ^>= 1.3.13
    , wai ^>= 3.2.2
    , wai-extra ^>= 3.1.1
    , warp ^>= 3.3.13
    , xml-conduit ^>= 1.9.0
  default-extensions:
    NamedFieldPuns
    OverloadedStrings
  default-language: Haskell2010
  exposed-modules: HaskellWeekly
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-exported-signatures
    -Wno-safe
    -Wno-unsafe
  hs-source-dirs: src/lib
  other-modules:
    HW.Application
    HW.Episodes
    HW.Handler.Advertising
    HW.Handler.Common
    HW.Handler.Episode
    HW.Handler.HealthCheck
    HW.Handler.Index
    HW.Handler.Issue
    HW.Handler.Newsletter
    HW.Handler.NewsletterFeed
    HW.Handler.Podcast
    HW.Handler.PodcastFeed
    HW.Handler.Redirect
    HW.Handler.Robots
    HW.Handler.Search
    HW.Handler.Sitemap
    HW.Handler.Survey
    HW.Issues
    HW.Main
    HW.Markdown
    HW.Middleware
    HW.Server
    HW.Template.Advertising
    HW.Template.Base
    HW.Template.Common
    HW.Template.Episode
    HW.Template.Index
    HW.Template.Issue
    HW.Template.Newsletter
    HW.Template.NewsletterFeed
    HW.Template.Podcast
    HW.Template.PodcastFeed
    HW.Template.Survey2017
    HW.Template.Survey2018
    HW.Template.Survey2019
    HW.Template.Survey2020
    HW.Template.Survey2021
    HW.Type.App
    HW.Type.Article
    HW.Type.Articles
    HW.Type.BaseUrl
    HW.Type.Caption
    HW.Type.Config
    HW.Type.Date
    HW.Type.Duration
    HW.Type.Episode
    HW.Type.Guid
    HW.Type.Issue
    HW.Type.Number
    HW.Type.Redirect
    HW.Type.Route
    HW.Type.Size
    HW.Type.State
    HW.Type.Summary
    HW.Type.Title
    Paths_haskellweekly

  if impl(ghc >= 8.8)
    ghc-options: -Wno-missing-deriving-strategies

  if impl(ghc >= 8.10)
    ghc-options:
      -Wno-missing-safe-haskell-mode
      -Wno-prepositive-qualified-module

executable haskellweekly
  build-depends: base, haskellweekly
  default-language: Haskell2010
  ghc-options: -rtsopts -threaded
  hs-source-dirs: src/exe
  main-is: Main.hs

test-suite test
  build-depends:
    base
    , bytestring
    , cmark
    , directory ^>= 1.3.1
    , filepath
    , haskellweekly
    , text
  default-language: Haskell2010
  ghc-options: -rtsopts -threaded
  hs-source-dirs: src/test
  main-is: Main.hs
  type: exitcode-stdio-1.0
