cabal-version: 2.0

name: haskellweekly
version: 0.2023.10.19
synopsis: Publishes curated news about Haskell.
description:
  Haskell Weekly publishes curated news about the Haskell programming language.

build-type: Simple
category: Web
license: MIT
maintainer: Taylor Fausak

data-dir: data
data-files:
  apple-podcasts.svg
  favicon.ico
  google-podcasts.svg
  logo.png
  newsletter/*.markdown
  podcast/*.vtt
  tachyons.css
extra-source-files: README.markdown
license-file: LICENSE.markdown

source-repository head
  location: https://github.com/haskellweekly/haskellweekly.git
  type: git

library
  autogen-modules: Paths_haskellweekly
  build-depends:
    base ^>= 4.17
    , bytestring ^>= 0.11.3
    , case-insensitive ^>= 1.2.1
    , cmark ^>= 0.6
    , containers ^>= 0.6.6
    , cryptonite ^>= 0.30
    , filepath ^>= 1.4.2
    , http-types ^>= 0.12.3
    , lucid2 ^>= 0.0.20221012
    , memory ^>= 0.18
    , network-uri ^>= 2.6.4
    , text ^>= 2.0.1
    , time ^>= 1.12.2
    , transformers ^>= 0.5.6
    , uuid ^>= 1.3.15
    , wai ^>= 3.2.3
    , wai-extra ^>= 3.1.13
    , warp ^>= 3.3.23
    , xml-conduit ^>= 1.9.1
  default-extensions:
    NamedFieldPuns
    OverloadedStrings
  default-language: Haskell2010
  exposed-modules: HaskellWeekly
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-exported-signatures
    -Wno-missing-kind-signatures
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe
  hs-source-dirs: source/library
  other-modules:
    HW.Application
    HW.Episodes
    HW.Handler.Advertising
    HW.Handler.Common
    HW.Handler.Episode
    HW.Handler.HealthCheck
    HW.Handler.Index
    HW.Handler.Issue
    HW.Handler.Newsletter
    HW.Handler.NewsletterFeed
    HW.Handler.Podcast
    HW.Handler.PodcastFeed
    HW.Handler.Redirect
    HW.Handler.Robots
    HW.Handler.Search
    HW.Handler.Sitemap
    HW.Handler.Survey
    HW.Issues
    HW.Main
    HW.Markdown
    HW.Middleware
    HW.Server
    HW.Template.Advertising
    HW.Template.Base
    HW.Template.Common
    HW.Template.Episode
    HW.Template.Index
    HW.Template.Issue
    HW.Template.Newsletter
    HW.Template.NewsletterFeed
    HW.Template.Podcast
    HW.Template.PodcastFeed
    HW.Template.Survey2017
    HW.Template.Survey2018
    HW.Template.Survey2019
    HW.Template.Survey2020
    HW.Template.Survey2021
    HW.Template.Survey2022
    HW.Type.App
    HW.Type.Article
    HW.Type.Articles
    HW.Type.BaseUrl
    HW.Type.Caption
    HW.Type.Config
    HW.Type.Date
    HW.Type.Duration
    HW.Type.Episode
    HW.Type.Guid
    HW.Type.Issue
    HW.Type.Number
    HW.Type.Redirect
    HW.Type.Route
    HW.Type.Size
    HW.Type.State
    HW.Type.Summary
    HW.Type.Title
    Paths_haskellweekly

executable haskellweekly
  build-depends: base, haskellweekly
  default-language: Haskell2010
  ghc-options: -rtsopts -threaded
  hs-source-dirs: source/executable
  main-is: Main.hs

test-suite haskellweekly-test-suite
  build-depends:
    base
    , bytestring
    , cmark
    , directory ^>= 1.3.7
    , filepath
    , haskellweekly
    , text
  default-language: Haskell2010
  ghc-options: -rtsopts -threaded
  hs-source-dirs: source/test-suite
  main-is: Main.hs
  type: exitcode-stdio-1.0
