cabal-version: 2.4
name: haskellweekly
version: 0.2024.9.12
synopsis: Publishes curated news about Haskell.
description:
  Haskell Weekly publishes curated news about the Haskell programming language.

build-type: Simple
category: Web
license: MIT
maintainer: Taylor Fausak
data-dir: data
data-files:
  apple-podcasts.svg
  favicon.ico
  google-podcasts.svg
  logo.png
  newsletter/**/*.markdown
  podcast/*.vtt
  tachyons.css

extra-doc-files: README.md
license-file: LICENSE.txt

source-repository head
  location: https://github.com/haskellweekly/haskellweekly
  type: git

common library
  build-depends: base ^>=4.20.0
  default-language: Haskell2010
  ghc-options:
    -Weverything
    -Wno-all-missed-specialisations
    -Wno-implicit-prelude
    -Wno-missed-specialisations
    -Wno-missing-deriving-strategies
    -Wno-missing-export-lists
    -Wno-missing-exported-signatures
    -Wno-missing-kind-signatures
    -Wno-missing-role-annotations
    -Wno-missing-safe-haskell-mode
    -Wno-prepositive-qualified-module
    -Wno-safe
    -Wno-unsafe

common executable
  import: library
  build-depends: haskellweekly
  ghc-options:
    -rtsopts
    -threaded

library
  import: library
  autogen-modules: Paths_haskellweekly
  build-depends:
    aeson ^>=2.2.3,
    async ^>=2.2.5,
    bytestring ^>=0.12.1,
    case-insensitive ^>=1.2.1,
    cmark ^>=0.6.1,
    containers ^>=0.7,
    crypton ^>=1.0.0,
    filepath ^>=1.5.2,
    http-client ^>=0.7.17,
    http-client-tls ^>=0.3.6,
    http-types ^>=0.12.4,
    lucid2 ^>=0.0.20240424,
    memory ^>=0.18.0,
    network-uri ^>=2.6.4,
    text ^>=2.1.1,
    time ^>=1.12.2,
    transformers ^>=0.6.1,
    uuid ^>=1.3.15,
    wai ^>=3.2.4,
    wai-extra ^>=3.1.15,
    warp ^>=3.4.1,
    xml-conduit ^>=1.9.1,

  default-extensions:
    NamedFieldPuns
    OverloadedStrings

  -- cabal-gild: discover source/library
  exposed-modules:
    HW.Application
    HW.Data.Episodes
    HW.Data.Issues
    HW.Episodes
    HW.Handler.Advertising
    HW.Handler.Common
    HW.Handler.Episode
    HW.Handler.HealthCheck
    HW.Handler.Index
    HW.Handler.Issue
    HW.Handler.Newsletter
    HW.Handler.NewsletterFeed
    HW.Handler.Podcast
    HW.Handler.PodcastFeed
    HW.Handler.Redirect
    HW.Handler.Robots
    HW.Handler.Search
    HW.Handler.Sitemap
    HW.Handler.Survey
    HW.Issues
    HW.Main
    HW.Markdown
    HW.Middleware
    HW.Server
    HW.Template.Advertising
    HW.Template.Base
    HW.Template.Common
    HW.Template.Episode
    HW.Template.Index
    HW.Template.Issue
    HW.Template.Newsletter
    HW.Template.NewsletterFeed
    HW.Template.Podcast
    HW.Template.PodcastFeed
    HW.Template.Survey2017
    HW.Template.Survey2018
    HW.Template.Survey2019
    HW.Template.Survey2020
    HW.Template.Survey2021
    HW.Template.Survey2022
    HW.Type.App
    HW.Type.Article
    HW.Type.Articles
    HW.Type.BaseUrl
    HW.Type.Caption
    HW.Type.Config
    HW.Type.Date
    HW.Type.Duration
    HW.Type.Episode
    HW.Type.Guid
    HW.Type.Issue
    HW.Type.Listmonk
    HW.Type.Number
    HW.Type.Redirect
    HW.Type.Route
    HW.Type.Size
    HW.Type.State
    HW.Type.Summary
    HW.Type.Title
    HW.Worker

  hs-source-dirs: source/library
  other-modules: Paths_haskellweekly

executable haskellweekly
  import: executable
  hs-source-dirs: source/executable
  main-is: Main.hs

test-suite haskellweekly-test-suite
  import: executable
  build-depends:
    bytestring,
    directory ^>=1.3.8,
    filepath,
    text,

  ghc-options:
    -rtsopts
    -threaded

  hs-source-dirs: source/test-suite
  main-is: Main.hs
  type: exitcode-stdio-1.0
